fix: [PIE-3361]: execution graph z-index

--- a/src/modules/70-pipeline/pages/execution/ExecutionPipelineView/ExecutionGraphView/ExecutionGraphView.module.scss
+++ b/src/modules/70-pipeline/pages/execution/ExecutionPipelineView/ExecutionGraphView/ExecutionGraphView.module.scss
@@ -31,7 +31,7 @@
   }
 
   & :global(.Pane.horizontal.Pane2) {
-    z-index: 200;
+    z-index: 2;
   }
 
   .splitPane2 {
